[project]
name = "human-uav-recon"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gurobipy>=12.0.3",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "mypy>=1.14.0",
    "networkx>=2.8.8",
    "numpy>=2.3.5",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandas-stubs>=2.3.2.250827",
    "scikit-learn>=1.7.1",
    "scikit-learn-stubs>=0.0.3",
    "seaborn>=0.13.2",
    "snakeviz>=2.2.2",
    "tabulate>=0.8.10",
    "tsplib95>=0.7.1",
    "types-networkx>=3.5.0.20250728",
    "types-seaborn>=0.13.2.20250914",
    "types-tabulate>=0.9.0.20241207",
]

[tool.mypy]
# Ignore missing type stubs for third-party libraries
ignore_missing_imports = true
# Disable daemon mode to prevent crashes
no_incremental = true
cache_dir = ".mypy_cache"
# Python version compatibility
python_version = "3.12"
